2005-08-17  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* emultempl/sh64elf.em (sh64_elf_${EMULATION_NAME}_after_allocation):
	Don't increment rel_count of .cranges here.  Set rawsize of .cranges.

2005-08-10  Nick Clifton  <nickc@redhat.com>

	* pe-dll.c (pe_exe_fill_sections): Call lang_reset_memory_regions
	before lang_size_sections.

2005-08-09  Alan Modra  <amodra@bigpond.net.au>

	* emulparams/hppa64linux.sh (LARGE_SECTIONS): Remove .tbss.

2005-08-08  Eric Doenges <Eric.Doenges@betty-tv.com>

	* Makefile.am (ALL_EMULATIONS): Add msp430x21xx	variants.
	Add rules to build these emulations.
	* Makefile.in: Regenerate.
	* configure.tgt (msp430): Add the new variants to the
	targ_extra_emuls list.
	* emulparams/msp430all.sh: Add entries for the msp430x21xx
	variants.

2005-08-05  H.J. Lu  <hongjiu.lu@intel.com>

	* ld.texinfo: Document PROVIDE_HIDDEN.

	* ldexp.c (exp_fold_tree_1): Hide a provided symbol if asked.
	(exp_provide): Add and set hidden.

	* ldexp.h (etree_type): Add hidden to assign.

	* ldgram.y (PROVIDE_HIDDEN): New.
	* ldlex.l (PROVIDE_HIDDEN): Likewise.

	* scripttempl/elf.sc: Use PROVIDE_HIDDEN on array bound
	symbols.

2005-08-05  Alan Modra  <amodra@bigpond.net.au>

	* emulparams/elf_x86_64.sh: Revert last change.
	* scripttempl/elf.sc (REL_LARGE, LARGE_SECTIONS): Define here.

2005-08-05  Alan Modra  <amodra@bigpond.net.au>

	* emulparams/armelf.sh (OTHER_BSS_END_SYMBOLS): Split out from
	OTHER_END_SYMBOLS.
	* emulparams/armelf_linux.sh: Likewise.
	* emulparams/armnto.sh: Likewise.
	* emulparams/criself.sh: Likewise.
	* emulparams/elf32mcore.sh: Likewise.
	* emulparams/criself.sh (OTHER_SYMBOLS): Define.
	* emulparams/crislinux.sh (OTHER_SYMBOLS): Define.
	(OTHER_END_SYMBOLS): Don't define.
	* emulparams/elf32fr30.sh: Likewise.
	* emulparams/elf64mmix.sh: Likewise.
	* emulparams/hppa64linux.sh: Likewise.
	* emulparams/m32relf.sh: Likewise.
	* emulparams/vxworks.sh: Likewise.
	* scripttempl/armbpabi.sc (OTHER_BSS_SECTIONS): Delete.