@@ -1,3 +1,11 @@
+2005-08-17  Jakub Jelinek  <jakub@redhat.com>
+
+	* ld-elfvers/vers.exp: Add a new test, vers30.
+	* ld-elfvers/vers30.c: New file.
+	* ld-elfvers/vers30.map: New file.
+	* ld-elfvers/vers30.ver: New file.
+	* ld-elfvers/vers30.dsym: New file.
+
 2005-08-17  Alan Modra  <amodra@bigpond.net.au>
 
 	* ld-alpha/tlsbin.rd: Update.
