@@ -1,3 +1,8 @@
+2005-08-17  Jakub Jelinek  <jakub@redhat.com>
+
+	* ldgram.y (vers_defns): Don't lose pattern list before
+	extern NAME {}.  Handle global, local and extern symbol names.
+
 2005-08-17  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
 
 	* emultempl/sh64elf.em (sh64_elf_${EMULATION_NAME}_after_allocation):
